--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -5,5 +5,7 @@
 <body>
   <img src="image1.png"></img>
   <img src="foo/image2.jpg"></img>
+  <div class="bg"></div>
+  <script src="/jquery.js"></script>
   <script src="/app.js"></script>
 </body>
